<resources>
    <string name="app_name">ShapeEditor</string>
    <string name="shape_menu">Об\'єкти</string>
    <string name="shape_point">Крапка</string>
    <string name="shape_line">Лінія</string>
    <string name="shape_rect">Прямокутник</string>
    <string name="shape_ellipse">Еліпс</string>
    <string name="shape_circle">Коло</string>
    <string name="shape_line_with_2circle">Лінія з двома колами</string>
    <string name="shape_cube">Куб</string>
    <string name="info">Довідка</string>
    <string name="file">Файл</string>
    <string name="btn_clear">Стерти</string>
    <string name="color_picker_msg">Виберіть колір</string>
    <string name="color">Заповнення</string>
    <string name="stroke">Обведення</string>
    <string name="close">Закрити</string>
</resources>