<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/shape_point_menu_item"
            android:title="@string/shape_point" />
        <item
            android:id="@+id/shape_line_menu_item"
            android:title="@string/shape_line" />
        <item
            android:id="@+id/shape_rect_menu_item"
            android:title="@string/shape_rect" />
        <item
            android:checked="true"
            android:id="@+id/shape_ellipse_menu_item"
            android:title="@string/shape_ellipse" />
        <item
            android:id="@+id/shape_circle_menu_item"
            android:title="@string/shape_circle" />
        <item
            android:id="@+id/shape_line_with_2circle"
            android:title="@string/shape_line_with_2circle" />
    </group>

</menu>